# hm

Async/Async1/: Async1.sln
Async/async2/: async2.sln
Atomic/Atomic1/: Atomic1.sln
Atomic/atomic2/: atomic2.sln
Atomic/atomic3/: atomic3.sln
Multithreading/Multithreading1/: Multithreading1.sln
Multithreading/Multithreading2/: Multithreading2.sln
Qt/Lsn5_signals_and_slots/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
Qt/Lsn6 QtConcurennt/: ExampleRace.h  mainwindow.cpp  mainwindow.h
Qt/lcn3/: CMakeLists.txt  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/lsn2.1/: CMakeLists.txt  main.cpp
Qt/lsn2f/: CMakeLists.txt  main.cpp
Qt/lsn4/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
abstract/abstract1/: abstract1.sln
abstract/abstract2/: abstract2.sln
cal/cal/: cal.sln
cmake/cmake1/: CMakeLists.txt  my_first_cmake_program.cpp
cmake/cmake_2/: CMakeLists.txt  Figure.cpp  Figure.h  Source1.cpp  Triangle.cpp  Triangle.h  equilateral_triangle.cpp  isosceles_triangle.cpp  parallelogram.cpp  parallelogram.h  quadrilateral.cpp  quadrilateral.h  rectangle.h  rhomb.cpp  rhomb.h  right_triangle.cpp  square.cpp
exceptions/exceptions1/: exceptions1.sln
exceptions/exceptions2/: exceptions2.sln
macros/macros1/: macros1.sln
macros/macros2/: macros2.sln
move/move1/: move1.sln
move/move2/: move2.sln
multy-files/multy-files/: multy-files.sln
multy-files/multyfiles2/: multyfiles2.sln
multy-files/multyfiles3/: multyfiles3.sln
pqxx01/: CMakeLIsts.txt  main.cpp
(+209 files in other folders)
